# hotplex

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  INSTALL.md  Makefile  README.md  README_zh.md  SECURITY.md  docker-compose.pg.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
.agents/rules/: aep.md  agentconfig.md  cli.md  golang.md  metrics.md  security.md  session.md  stt.md  testing.md  worker-proc.md
client/: AGENTS.md  README.md  client.go  go.mod  go.sum  options.go
cmd/hotplex/: AGENTS.md  admin_adapters.go  banner.go  bot_config_adapter.go  config_cmd.go  cron_admin_adapter.go  cron_cmd.go  cron_history.go  gateway_cmd.go  gateway_run.go  main.go  messaging_init.go  pid.go  routes.go  security.go  service_install.go  status.go  yaml_verify_test.go
configs/: README.md  config-dev.yaml  config-prod.yaml  config.yaml  env.example
docker/: docker-entrypoint.sh
docs/: getting-started.md  index.md
docs/architecture/: AEP-v1-Protocol.md  Platform-Messaging-Architecture-Diagrams.md  Platform-Messaging-Extension.md  WebSocket-Full-Duplex-Flow.md  Worker-Gateway-Design.md
docs/explanation/: brain-llm-orchestration.md  security-model.md  session-lifecycle.md  why-hotplex.md
docs/reference/: admin-api.md  aep-protocol.md  cli.md  configuration.md  glossary.md  sdk-go.md  sdk-java.md  sdk-python.md  sdk-typescript.md  (+1 more)
e2e/: helper_test.go  session_test.go
examples/: README.md
examples/python-client/: README.md  pyproject.toml
examples/python-client/hotplex_client/: __init__.py
scripts/: README.md  dev.sh
(+319 files in other folders)
